--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background-color: #3498db; /* Blue background color */
+            background-color: black; /* Black background color */
             color: #ecf0f1; /* Light grey text color */
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-size: 28px;
             text-align: center;
+        }
+
+        #question-container {
+            padding: 20px;
+            border: 2px solid #e74c3c; /* Red border color */
+            border-radius: 10px; /* Rounded corners */
+            background-color: #2c3e50; /* Dark grey background color */
         }
 
         h1 {
@@ -24,17 +31,28 @@
             color: #e74c3c; /* Red color for headers */
             margin-bottom: 20px;
         }
+
+        #countdown {
+            margin-top: 10px;
+        }
+
+        .answer {
+            color: yellow; /* Yellow color for answers */
+        }
     </style>
 </head>
 <body>
 
 <script>
     document.addEventListener("DOMContentLoaded", function () {
-        const questionContainer = document.body;
+        const questionContainer = document.createElement("div");
         const countdownElement = document.createElement("div");
 
+        document.body.appendChild(questionContainer);
+
         const allArtQuestions = [
-       pergunta: "Qual é a principal variedade de uva utilizada na produção de Champagne?",
+             {
+    pergunta: "Qual é a principal variedade de uva utilizada na produção de Champagne?",
     resposta: "Chardonnay, Pinot Noir e Pinot Meunier"
   },
   {
@@ -221,18 +239,19 @@
     pergunta: "Qual é o termo para o cheiro da terra ou solo no vinho?",
     resposta: "Terroir"
   },
-];
+
+        ];
 
         function displayRandomQuestion() {
             const randomIndex = Math.floor(Math.random() * allArtQuestions.length);
             const currentQuestion = allArtQuestions[randomIndex];
 
             questionContainer.innerHTML = `<h1>${currentQuestion.question}</h1>`;
+            questionContainer.appendChild(countdownElement);
 
             // Show the countdown for 15 seconds
             let secondsLeft = 15;
             countdownElement.textContent = `Tempo restante: ${secondsLeft}s`;
-            document.body.appendChild(countdownElement);
 
             const countdownInterval = setInterval(() => {
                 secondsLeft--;
@@ -241,10 +260,9 @@
                     countdownElement.textContent = `Tempo restante: ${secondsLeft}s`;
                 } else {
                     clearInterval(countdownInterval);
-                    countdownElement.textContent = "";
 
                     // Show the answer for 10 seconds
-                    questionContainer.innerHTML = `<h1>Resposta: ${currentQuestion.answer}</h1>`;
+                    questionContainer.innerHTML += `<h1 class="answer">Resposta: ${currentQuestion.answer}</h1>`;
                     setTimeout(() => {
                         // Show "Lance o dado outra vez" for 10 seconds
                         questionContainer.innerHTML = "<h1>Lance o dado outra vez</h1>";
@@ -263,4 +281,3 @@
 
 </body>
 </html>
-
