--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         document.body.appendChild(questionContainer);
 
-        const allAVinQuestions = [
+        const allVinQuestions = [
             
              {
     pergunta: "Qual é a principal variedade de uva utilizada na produção de Champagne?",
